.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:13:49 **** Incremental Build of configuration Debug for project SumoBot ****
make -j16 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-g++ "../Core/Src/task.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/task.d" -MT"Core/Src/task.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/task.o"
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:279,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.cpp:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:98:47: error: expected ')' before numeric constant
   98 | #define GPIO_PIN_13                ((uint16_t)0x2000)  /* Pin 13 selected   */
      |                                    ~          ^~~~~~
../Core/Inc/main.h:90:20: note: in expansion of macro 'GPIO_PIN_13'
   90 | #define nSLEEP_Pin GPIO_PIN_13
      |                    ^~~~~~~~~~~
../Core/Inc/DRV8876.h:24:15: note: in expansion of macro 'nSLEEP_Pin'
   24 |  uint16_t     nSLEEP_Pin;      // Pin number associated with EN GPIO pin
      |               ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:47: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
